<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="114dp"
                android:layout_height="175dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/ic_poster_placeholder_grey"
                android:paddingVertical="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:text="@string/title_default"
                android:textColor="@color/grey"
                android:background="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
                app:layout_constraintTop_toTopOf="@id/iv_movie_poster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/genre_default"
                android:textColor="@color/grey"
                android:background="@color/grey"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/tv_movie_release_date"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_title"
                app:layout_constraintStart_toStartOf="@id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/release_date_default"
                android:textColor="@color/grey"
                android:background="@color/grey"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_title"
                app:layout_constraintStart_toStartOf="@id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_genres"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_votes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/vote_rating"
                android:textColor="@color/grey"
                android:background="@color/grey"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_title"
                app:layout_constraintStart_toStartOf="@id/tv_movie_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_release_date"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="14dp"
                android:text="@string/overview"
                android:textColor="@color/grey"
                android:background="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@id/iv_movie_poster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_overview_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lorem"
                android:textColor="@color/grey"
                android:background="@color/grey"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_overview"
                app:layout_constraintStart_toStartOf="@id/tv_movie_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_overview"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/trailer"
                android:textColor="@color/grey"
                android:background="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_overview"
                app:layout_constraintStart_toStartOf="@id/tv_movie_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_overview_field" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:foreground="@color/grey"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_overview"
                app:layout_constraintStart_toStartOf="@id/tv_movie_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_trailer">

<!--                <WebView-->
<!--                    android:id="@+id/wv_movie_detail"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="200dp"-->
<!--                    android:visibility="visible"/>-->
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>