<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:paddingVertical="4dp"
            android:background="@drawable/ic_poster_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title_default"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@id/iv_movie_poster" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/genre_default"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/tv_movie_release_date"
            app:layout_constraintEnd_toEndOf="@id/tv_movie_title"
            app:layout_constraintStart_toStartOf="@id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/release_date_default"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/tv_movie_votes"
            app:layout_constraintEnd_toEndOf="@id/tv_movie_title"
            app:layout_constraintStart_toStartOf="@id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_genres"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_votes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/vote_rating"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie_poster"
            app:layout_constraintEnd_toEndOf="@id/tv_movie_title"
            app:layout_constraintStart_toStartOf="@id/tv_movie_title"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>