<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_list_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_review_detail_logo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:padding="8dp"
                android:background="@drawable/ic_genre_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_review_detail_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/author"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_review_detail_logo"
                app:layout_constraintTop_toTopOf="@id/iv_review_detail_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_review_detail_votes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/vote_rating_review"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_review_detail_release_date"
                app:layout_constraintBottom_toBottomOf="@id/iv_review_detail_logo"
                app:layout_constraintStart_toStartOf="@id/tv_review_detail_author" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_review_detail_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:gravity="end"
                android:text="@string/release_date_default"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_review_detail_votes"
                app:layout_constraintBottom_toBottomOf="@id/iv_review_detail_logo"
                app:layout_constraintEnd_toEndOf="@id/tv_review_detail_author" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_review_detail_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lorem"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@id/iv_review_detail_logo"
                app:layout_constraintEnd_toEndOf="@id/tv_review_detail_author"
                app:layout_constraintStart_toStartOf="@id/iv_review_detail_logo"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>