<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="10dp"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_review_logo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:background="@drawable/ic_genre_placeholder_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_review_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title_default"
            android:textColor="@color/grey"
            android:background="@color/grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_review_logo"
            app:layout_constraintTop_toTopOf="@id/iv_review_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_review_votes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/vote_rating_review"
            android:textColor="@color/grey"
            android:background="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_review_logo"
            app:layout_constraintEnd_toEndOf="@id/tv_review_title"
            app:layout_constraintStart_toStartOf="@id/tv_review_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_review_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginTop="8dp"
            android:text="@string/lorem"
            android:textColor="@color/grey"
            android:background="@color/grey"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/iv_review_logo"
            app:layout_constraintEnd_toEndOf="@id/tv_review_title"
            app:layout_constraintStart_toStartOf="@id/iv_review_logo"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>