<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/sl_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_shape="linear">

        <include layout="@layout/fragment_movie_detail_placeholder" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_movie_detail_poster"
                android:layout_width="114dp"
                android:layout_height="175dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/ic_poster_placeholder"
                android:paddingVertical="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:text="@string/title_default"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_movie_detail_poster"
                app:layout_constraintTop_toTopOf="@id/iv_movie_detail_poster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/genre_default"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/tv_movie_detail_release_date"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_detail_title"
                app:layout_constraintStart_toStartOf="@id/tv_movie_detail_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_title"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/release_date_default"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_detail_title"
                app:layout_constraintStart_toStartOf="@id/tv_movie_detail_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_genres"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail_votes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/vote_rating"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_detail_title"
                app:layout_constraintStart_toStartOf="@id/tv_movie_detail_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_release_date"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="14dp"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/iv_movie_detail_poster"
                app:layout_constraintTop_toBottomOf="@id/iv_movie_detail_poster" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail_overview_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lorem"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_detail_overview"
                app:layout_constraintStart_toStartOf="@id/tv_movie_detail_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_overview"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/trailer"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_detail_overview"
                app:layout_constraintStart_toStartOf="@id/tv_movie_detail_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_overview_field" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/tv_movie_detail_overview"
                app:layout_constraintStart_toStartOf="@id/tv_movie_detail_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_trailer">

                <WebView
                    android:id="@+id/wv_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/yt_player_movie_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/video_unavailable"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_list_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="false"
        app:behavior_peekHeight="50dp"
        app:cardCornerRadius="15dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_list_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:background="@color/light_blue">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/div_list_review"
                android:layout_width="72dp"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_list_review_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16sp"
                android:text="@string/review"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_review"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="14dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_list_review_label"
                app:layout_constraintTop_toBottomOf="@id/tv_list_review_label"
                tools:listitem="@layout/item_review" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/sl_list_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="14dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_list_review_label"
                app:layout_constraintTop_toBottomOf="@id/tv_list_review_label"
                app:shimmer_shape="linear">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_review_placeholder" />

                    <include
                        layout="@layout/item_review_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp" />

                    <include layout="@layout/item_review_placeholder" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>